# langchain-practical-example

./: .gitignore  pyproject.toml
chatbot/: simple.py
data/: data_historis_bbri_2000-2024.csv  data_historis_jpfa_2012-2024.csv
docloader/: dirloader-store.py  dirloader.py  docloader-test.py  loader-from-db.py  pdf-loader.py  wikipedia-loader-store.py  wikipedia-loader.py
general-tools/: csvcleaner.py  output_copy.csv
rag/: load-split-embed-store.py  vector-store-retrieve-1.py
serve/: remote.py  serve.py
simple/: 2_chat_conv.py  simple_chat.py  simple_chat_chain.py  simple_chat_dua.py  simple_chat_template.py
structured/: simple_structure.py  simple_structure_json.py  simple_structure_union.py
tools/: simple_tool.py
