[tool.poetry]
name = "langchain-examples"
version = "1.0.0"
description = "Unstructured LangChain Examples"
authors = ["aprillins <aprillins@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
python-dotenv = "^1.0.1"
langchain = ">=0.3,<0.4"
langchain-community = ">=0.3,<0.4"
langchain-core = ">=0.3,<0.4"
langchain-text-splitters = ">=0.3,<0.4"
langchain-openai = ">=0.2,<0.3"
langchain-chroma= ">=0.1.2"
firestore = "^0.0.8"
tiktoken = "^0.7.0"
sentence-transformers = "^3.0.0"
bs4 = "^0.0.2"
langchainhub = "^0.1.18"
wikipedia = "^1.4.0"
tavily-python = "^0.3.3"
protobuf = "<3.21"
chromadb = "<0.5.13"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 
